# rpa-price

./: docker-compose.yml
rpa-price/: .env-example  Dockerfile  pyproject.toml  rpa.py
rpa-price/rpa/: rpa.py
rpa-price/tests/: test_extract_data_from_card_amazon.py  test_get_amazon_content.py
rpa-price/tests/testdata/: card_amazon.html
